Phase 2 - 3: NestJS & Shared libraries setup complete

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,33 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/common": ["libs/common/src"],
-      "@app/database": ["libs/database/src"],
-      "@app/events": ["libs/events/src"]
+      "@app/common": [
+        "libs/common/src"
+      ],
+      "@app/database": [
+        "libs/database/src"
+      ],
+      "@app/events": [
+        "libs/events/src"
+      ],
+      "app/common": [
+        "libs/common/src"
+      ],
+      "app/common/*": [
+        "libs/common/src/*"
+      ],
+      "app/database": [
+        "libs/database/src"
+      ],
+      "app/database/*": [
+        "libs/database/src/*"
+      ],
+      "app/events": [
+        "libs/events/src"
+      ],
+      "app/events/*": [
+        "libs/events/src/*"
+      ]
     }
   }
 }
