--- a/package.json
+++ b/package.json
@@ -26,10 +26,17 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/passport-jwt": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.0"
+  },
+  "dependencies": {
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/passport": "^11.0.5",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   }
 }
